# EasyGaussianSplatting

./: .gitignore  CMakeLists.txt
gsplatcu/: CMakeLists.txt  additional.cu  gausplat.cu  gausplat.h  kernel.cuh
